fdo#67871: Revert "coverity#705731 Resource leak"

... and delete pContourPolyPolygon instead. Otherwise there is a null pointer
dereference.

This reverts commit e3258713793f03d6cf96c19ff4c5d15a0cd666f1.

Change-Id: Id9d8c514c786b42233a35a9ade55d0c05986fb08